Add a DOM like API to common/xml - Refactor SimpleXMLParser: XMLParser, XMLReader, XMLException, XMLReaderException - Update all reader implementations to use XMLElement (except archetype V2)