@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2020, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 package io.helidon.build.archetype.engine.v1;
 
-import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Properties;
 import java.io.File;
@@ -26,22 +24,23 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import io.helidon.build.archetype.engine.v1.ArchetypeDescriptor.FileSet;
 import io.helidon.build.archetype.engine.v1.ArchetypeDescriptor.Property;
 import io.helidon.build.archetype.engine.v1.ArchetypeDescriptor.Replacement;
 import io.helidon.build.archetype.engine.v1.ArchetypeDescriptor.Transformation;
+import io.helidon.build.common.FileUtils;
 import io.helidon.build.common.PropertyEvaluator;
 import io.helidon.build.common.Strings;
 
 import io.helidon.build.common.test.utils.TestFiles;
 import org.junit.jupiter.api.Test;
 
-import static io.helidon.build.common.Unchecked.unchecked;
+import static io.helidon.build.archetype.engine.v1.ArchetypeEngine.evaluateConditional;
+import static io.helidon.build.archetype.engine.v1.ArchetypeEngine.transform;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.CoreMatchers.nullValue;
@@ -75,16 +74,13 @@ public class ArchetypeEngineTest extends ArchetypeBaseTest {
 
     @Test
     public void testTransform() {
-        LinkedList<Transformation> transformations = new LinkedList<>();
-        Transformation t1 = new Transformation("mustache");
-        t1.replacements().add(new Replacement("\\.mustache$", ""));
-        transformations.add(t1);
-        Transformation t2 = new Transformation("packaged");
-        t2.replacements().add(new Replacement("__pkg__", "${package/\\./\\/}"));
-        transformations.add(t2);
-        assertThat(ArchetypeEngine.transform("src/main/java/__pkg__/Main.java.mustache", transformations,
-                Map.of("package", "com.example.myapp")),
-                is("src/main/java/com/example/myapp/Main.java"));
+        Map<String, String> props = Map.of("package", "com.example.myapp");
+        List<Transformation> tfs = List.of(
+                new Transformation("mustache", List.of(new Replacement("\\.mustache$", ""))),
+                new Transformation("packaged", List.of(new Replacement("__pkg__", "${package/\\./\\/}"))));
+
+        String transformed = transform("src/main/java/__pkg__/Main.java.mustache", tfs, props);
+        assertThat(transformed, is("src/main/java/com/example/myapp/Main.java"));
     }
 
     @Test
@@ -93,50 +89,52 @@ public class ArchetypeEngineTest extends ArchetypeBaseTest {
         Map<String, String> props2 = Map.of("prop1", "true", "prop2", "true");
 
         Property prop1 = new Property("prop1", null);
-        FileSet fset1 = new FileSet(List.of(), List.of(prop1), List.of());
-        assertThat(ArchetypeEngine.evaluateConditional(fset1, props1), is(true));
-        assertThat(ArchetypeEngine.evaluateConditional(fset1, Collections.emptyMap()), is(false));
+        FileSet f1 = new FileSet(null, List.of(), List.of(), List.of(), List.of(prop1), List.of());
+        assertThat(evaluateConditional(f1, props1), is(true));
+        assertThat(evaluateConditional(f1, Map.of()), is(false));
 
-        FileSet fset2 = new FileSet(List.of(), List.of(), List.of(prop1));
-        assertThat(ArchetypeEngine.evaluateConditional(fset2, props1), is(false));
-        assertThat(ArchetypeEngine.evaluateConditional(fset2, Collections.emptyMap()), is(true));
+        FileSet f2 = new FileSet(null, List.of(), List.of(), List.of(), List.of(), List.of(prop1));
+        assertThat(evaluateConditional(f2, props1), is(false));
+        assertThat(evaluateConditional(f2, Map.of()), is(true));
 
         Property prop2 = new Property("prop2", null);
-        FileSet fset3 = new FileSet(List.of(), List.of(prop1, prop2), List.of());
-        assertThat(ArchetypeEngine.evaluateConditional(fset3, props2), is(true));
-        assertThat(ArchetypeEngine.evaluateConditional(fset3, props1), is(false));
-        assertThat(ArchetypeEngine.evaluateConditional(fset3, Collections.emptyMap()), is(false));
+        FileSet f3 = new FileSet(null, List.of(), List.of(), List.of(), List.of(prop1, prop2), List.of());
+        assertThat(evaluateConditional(f3, props2), is(true));
+        assertThat(evaluateConditional(f3, props1), is(false));
+        assertThat(evaluateConditional(f3, Map.of()), is(false));
 
-        FileSet fset4 = new FileSet(List.of(), List.of(prop1), List.of(prop2));
-        assertThat(ArchetypeEngine.evaluateConditional(fset4, props2), is(false));
-        assertThat(ArchetypeEngine.evaluateConditional(fset4, Collections.emptyMap()), is(false));
+        FileSet f4 = new FileSet(null, List.of(), List.of(), List.of(), List.of(prop1), List.of(prop2));
+        assertThat(evaluateConditional(f4, props2), is(false));
+        assertThat(evaluateConditional(f4, Map.of()), is(false));
     }
 
     @Test
     public void testGenerate() throws IOException {
-        Map<String, String> properties = new HashMap<>();
-        properties.put("groupId", "com.example");
-        properties.put("artifactId", "my-project");
-        properties.put("version", "1.0-SNAPSHOT");
-        properties.put("name", "my super project");
-        properties.put("package", "com.example.myproject");
-        properties.put("maven", "true");
+        Map<String, String> properties = Map.of(
+                "groupId", "com.example",
+                "artifactId", "my-project",
+                "version", "1.0-SNAPSHOT",
+                "name", "my super project",
+                "package", "com.example.myproject",
+                "maven", "true");
         File targetDir = new File(new File("").getAbsolutePath(), "target");
         Path outputDirPath = targetDir.toPath().resolve("test-project");
-        if (Files.exists(outputDirPath)) {
-            Files.walk(outputDirPath)
-                    .sorted(Comparator.reverseOrder())
-                    .forEach(unchecked(Files::delete));
-        }
+
+        FileUtils.deleteDirectory(outputDirPath);
         assertThat(Files.exists(outputDirPath), is(false));
-        new ArchetypeEngine(targetDir(), properties).generate(outputDirPath);
+
+        try (ArchetypeEngine engine = new ArchetypeEngine(targetDir(), properties)) {
+            engine.generate(outputDirPath);
+        }
         assertThat(Files.exists(outputDirPath), is(true));
-        assertThat(Files.walk(outputDirPath)
-                .filter(p -> !Files.isDirectory(p))
-                .map((p) -> TestFiles.pathOf(outputDirPath.relativize(p)))
-                .sorted()
-                .collect(Collectors.toList()),
-                is(List.of("pom.xml", "src/main/java/com/example/myproject/Main.java")));
+
+        try (Stream<Path> dirStream = Files.walk(outputDirPath)) {
+            List<String> files = dirStream.filter(p -> !Files.isDirectory(p))
+                    .map((p) -> TestFiles.pathOf(outputDirPath.relativize(p)))
+                    .sorted()
+                    .collect(Collectors.toList());
+            assertThat(files, is(List.of("pom.xml", "src/main/java/com/example/myproject/Main.java")));
+        }
 
         InputStream is = ArchetypeEngineTest.class.getClassLoader().getResourceAsStream("META-INF/test.properties");
         assertThat(is, is(not(nullValue())));
@@ -155,6 +153,6 @@ public class ArchetypeEngineTest extends ArchetypeBaseTest {
     }
 
     private static String readFile(Path file) throws IOException {
-        return Strings.normalizeNewLines(new String(Files.readAllBytes(file), StandardCharsets.UTF_8));
+        return Strings.normalizeNewLines(Files.readString(file));
     }
 }
